src/core/Claroline/CoreBundle/Tests/Stub/plugin/Invalid/UnexpectedResourceIcon/InvalidUnexpectedResourceIcon.php
<?php

namespace Invalid\UnexpectedResourceIcon;

use Claroline\CoreBundle\Library\PluginBundle;

class InvalidUnexpectedResourceIcon extends PluginBundle
{
}